Correct font-size styling on mobile devices

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -1,6 +1,6 @@
 body {
 	max-width: 1000px;
-	padding: 4rem 2rem;
+	padding: 4rem 3rem;
 	margin: auto;
 	background-color: #FEFEFC;
 }
@@ -34,6 +34,22 @@ h3 {
 
 h3 {
 	font-weight: 400;
+}
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution:  192dpi) {
+	h1 {
+		font-size: 76pt;
+	}
+
+	h2 {
+		font-size: 42pt;
+	}
+
+	p,
+	li,
+	h3 {
+	    font-size: 24pt;
+	}
 }
 
 p {
